crates/reinhardt-core/crates/macros/tests/ui/routes/fail/unclosed_brace.rs
use reinhardt_macros::get;

#[get("/users/{id")]
async fn get_user() -> Result<(), ()> {
    Ok(())
}

fn main() {}
